--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://dominio/xxx",
   "dependencies": {
+    "ajv": "^8.17.1",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "react": ">=16.8.0",
