--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "now-ui-kit-react",
   "version": "1.5.2",
   "private": true,
-  "homepage": "https://dominio/xxx",
+  "homepage": "https://maurilio24.github.io/zaldivar_examen_p1",
   "dependencies": {
     "ajv": "^8.17.1",
+    "gh-pages": "^6.1.1",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "react": ">=16.8.0",
@@ -18,6 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
